Add menu desktop view

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
   <header>
-    <nav style="background-color: rgb(248, 248, 248);">
+    <nav>
       <ul class="nav-container menu">
-        <li><a href="index.css"> <p id="logo">Canari</p></a</li>
+        <li><a href="index.css" id="logo">Canari</a></li>
         <li><a href="#" class="menu-item">New</a</li>
         <li><a href="#" class="menu-item">Topo</a</li>
         <li><a href="#" class="menu-item">Exos</a</li>
@@ -23,14 +23,14 @@
 
       <ul class="nav-container">
         <li>
-          <input type="text" size="35" placeholder="Que recherches-tu?">
+          <input type="text" placeholder="Que recherches-tu?" class="search-bar">
           <input type="button"  value="Rechercher" class="btn-search">
         </li>
       </ul>
     </nav>
 
   </header>
-  <div id="slogan">Nouvelle compétition dans : </div>
+  <div id="slogan">Nouvelle compétition dans: </div>
   <section class="main">
       <div class="news info">
         <h2 >Top 100</h2>
