--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
@@ -16,9 +15,9 @@
     <nav>
       <ul class="nav-container menu">
         <li><a href="index.css" id="logo">Canari</a></li>
-        <li><a href="#" class="menu-item">New</a</li>
-        <li><a href="#" class="menu-item">Topo</a</li>
-        <li><a href="#" class="menu-item">Exos</a</li>
+        <li><a href="#" class="menu-item">New</a></li>
+        <li><a href="#" class="menu-item">Topo</a></li>
+        <li><a href="#" class="menu-item">Exos</a></li>
       </ul>
 
       <ul class="nav-container">
@@ -33,83 +32,65 @@
   <div id="slogan">Nouvelle compétition dans: </div>
   <section class="main">
       <div class="news info">
-        <h2 >Top 100</h2>
+        <h2 >Top 100: Best Students</h2>
       </div>
 
       <div class="news topics">
-        <div class="col-md-12 ">
-          <div class="card m-3 news-topic-card ">
-            <div class="row g-0 rounded-3">
-              <div class="col-md-4">
-                <img src="africa-day-3178166-2666341.png" class="img-fluid rounded-start illustration"  alt="...">
+          <div class="news-topic-card">
+              <div class="illustration-card">
+                <img src="20210712-GOnvUYeCAq.png" class="illustration">
               </div>
-              <div class="col-md-8">
-                <div class="card-body" style=" margin-top: 20px;">
+              <div class="card-body">
+                <div >
                   <p class="description"> MATHEMATIQUE SCIENTIFIQUE (TD & TC)</p>
-                  <h5 class="card-title big-title">Limites et Dérivés</h5>
+                  <h5 class="big-title">Limites et Dérivés</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
               </div>
-            </div>
           </div>
+
+          <div class="news-topic-card">
+            <div class="illustration-card">
+              <img src="pic2.png" class="illustration">
+            </div>
+            <div class="card-body">
+              <div >
+                <p class="description"> MATHEMATIQUE SCIENTIFIQUE (TD & TC)</p>
+                <h5 class="card-title big-title">Limites et Dérivés</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
         </div>
 
-        <div class="col-md-12 ">
-          <div class="card m-3 news-topic-card">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="africa-day-3178166-2666341.png" class="img-fluid rounded-start" width="150px" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <p class="description"> MATHEMATIQUE SCIENTIFIQUE (TD & TC)</p>
-                  <h5 class="card-title big-title">Equation Linéaires</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
+        <div class="news-topic-card">
+          <div class="illustration-card">
+            <img src="pic3.png" class="illustration">
+          </div>
+          <div class="card-body">
+            <div >
+              <p class="description"> MATHEMATIQUE SCIENTIFIQUE (TD & TC)</p>
+              <h5 class="card-title big-title">Limites et Dérivés</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
-        </div>
-
-        <div class="col-md-12 ">
-          <div class="card m-3 news-topic-card">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="africa-day-3178166-2666341.png" class="img-fluid rounded-start" width="150px" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <p class="description"> MATHEMATIQUE SCIENTIFIQUE (TC)</p>
-                  <h5 class="card-title big-title">Barycentres</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        </div>
-
-        <div class="col-md-12 ">
-          <div class="card m-3 news-topic-card">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="africa-day-3178166-2666341.png" class="img-fluid rounded-start" width="150px" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <p class="description"> MATHEMATIQUE SCIENTIFIQUE (3ème)</p>
-                  <h5 class="card-title big-title">Théorème Pythagore</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
+
+      <div class="news-topic-card">
+        <div class="illustration-card">
+          <img src="20210712-GOnvUYeCAq.png" class="illustration">
+        </div>
+        <div class="card-body">
+          <div >
+            <p class="description"> MATHEMATIQUE SCIENTIFIQUE (TD & TC)</p>
+            <h5 class="card-title big-title">Limites et Dérivés</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+    </div>
   </section>
 </body>
 </html>
