Add score table

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="index.css">
   <title>Accueil</title>
 </head>
@@ -32,7 +33,93 @@
   <div id="slogan">Nouvelle compétition dans: </div>
   <section class="main">
       <div class="news info">
-        <h2 >Top 100: Best Students</h2>
+        <h2 >Top 100:</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Noms</th>
+              <th>Scores</th>
+              <th>Rangs</th>
+            </tr>
+          </thead>
+          <tbody> 
+            <tr>
+                <td class="names">Jill</td>
+                <td class="up">90 <i class="fa fa-arrow-up up"></i</td>
+                <td class="up">1</td>
+
+            </tr>
+
+            <tr>
+              <td class="names">Eve</td>
+              <td class="down">78 <i class="fa fa-arrow-down down"></i></td>
+              <td class="down">2</td>
+            </tr>
+
+            <tr>
+              <td class="names">Ola</td>
+              <td class="stable">76 <i class="fa fa-minus stable"></i></i></td>
+              <td class="stable">3</td>
+            </tr>
+
+            <tr>
+              <td class="names">Jill</td>
+              <td class="up">50 <i class="fa fa-arrow-up up"></i</td>
+              <td class="up">4</td>
+
+          </tr>
+
+          <tr>
+            <td class="names">Eve</td>
+            <td class="down">49 <i class="fa fa-arrow-down down"></i></td>
+            <td class="down">5</td>
+          </tr>
+
+          <tr>
+            <td class="names">Jill</td>
+            <td class="up">39 <i class="fa fa-arrow-up up"></i</td>
+            <td class="up">6</td>
+
+        </tr>
+
+        <tr>
+          <td class="names">Eve</td>
+          <td class="down">30 <i class="fa fa-arrow-down down"></i></td>
+          <td class="down">7</td>
+        </tr>
+
+        <tr>
+          <td class="names">Jill</td>
+          <td class="up">20 <i class="fa fa-arrow-up up"></i</td>
+          <td class="up">8</td>
+
+      </tr>
+
+      <tr>
+        <td class="names">Eve</td>
+        <td class="down">18 <i class="fa fa-arrow-down down"></i></td>
+        <td class="down">9</td>
+      </tr>
+      <tr>
+        <td class="names">Jill</td>
+        <td class="up">15 <i class="fa fa-arrow-up up"></i</td>
+        <td class="up">10</td>
+
+    </tr>
+
+    <tr>
+      <td class="names">Eve</td>
+      <td class="down">12<i class="fa fa-arrow-down down"></i></td>
+      <td class="down">11</td>
+    </tr>
+    <tr>
+     <td>
+      Voir plus ...
+     </td>
+    </tr>
+          </tbody>
+
+        </table>
       </div>
 
       <div class="news topics">
