--- a/front-end/index.html
+++ b/front-end/index.html
@@ -30,10 +30,11 @@
     </nav>
 
   </header>
-  <div id="slogan">Nouvelle compétition dans: </div>
+  <div id="slogan">Prochaine compétition dans: 
+    <button class="timedown">30:40:05</button> </div>
   <section class="main">
       <div class="news info">
-        <h2 >Top 100:</h2>
+        <h3 class="title-rank" >Top 100:</h2>
         <table>
           <thead>
             <tr>
@@ -143,8 +144,8 @@
             </div>
             <div class="card-body">
               <div >
-                <p class="description"> MATHEMATIQUE SCIENTIFIQUE (TD & TC)</p>
-                <h5 class="card-title big-title">Limites et Dérivés</h5>
+                <p class="description"> MATHEMATIQUE SCIENTIFIQUE (TC)</p>
+                <h5 class="card-title big-title">Barycentres</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               </div>
@@ -157,8 +158,8 @@
           </div>
           <div class="card-body">
             <div >
-              <p class="description"> MATHEMATIQUE SCIENTIFIQUE (TD & TC)</p>
-              <h5 class="card-title big-title">Limites et Dérivés</h5>
+              <p class="description"> MATHEMATIQUE SCIENTIFIQUE (3ème)</p>
+              <h5 class="card-title big-title">Théorème de pythagore</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
@@ -171,8 +172,8 @@
         </div>
         <div class="card-body">
           <div >
-            <p class="description"> MATHEMATIQUE SCIENTIFIQUE (TD & TC)</p>
-            <h5 class="card-title big-title">Limites et Dérivés</h5>
+            <p class="description"> CHIMIE (TD & TC)</p>
+            <h5 class="card-title big-title">Alchools</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
