Put index outside

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="/front-end/index.css">
   <title>Accueil</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
     <button class="timedown">30:40:05</button> </div>
   <section class="main">
       <div class="news info">
-        <h3 class="title-rank" >Top 100:</h2>
+        <h3 class="title-rank" >Top 10 Students:</h2>
         <table>
           <thead>
             <tr>
@@ -107,14 +107,8 @@
         <td class="up">10</td>
 
     </tr>
-
     <tr>
-      <td class="names">Eve</td>
-      <td class="down">12<i class="fa fa-arrow-down down"></i></td>
-      <td class="down">11</td>
-    </tr>
-    <tr>
-     <td>
+     <td class="show-more">
       Voir plus ...
      </td>
     </tr>
@@ -126,7 +120,7 @@
       <div class="news topics">
           <div class="news-topic-card">
               <div class="illustration-card">
-                <img src="20210712-GOnvUYeCAq.png" class="illustration">
+                <img src="/front-end/20210712-GOnvUYeCAq.png" class="illustration">
               </div>
               <div class="card-body">
                 <div >
@@ -140,7 +134,7 @@
 
           <div class="news-topic-card">
             <div class="illustration-card">
-              <img src="pic2.png" class="illustration">
+              <img src="/front-end/pic2.png" class="illustration">
             </div>
             <div class="card-body">
               <div >
@@ -154,7 +148,7 @@
 
         <div class="news-topic-card">
           <div class="illustration-card">
-            <img src="pic3.png" class="illustration">
+            <img src="/front-end/pic3.png" class="illustration">
           </div>
           <div class="card-body">
             <div >
@@ -168,7 +162,7 @@
 
       <div class="news-topic-card">
         <div class="illustration-card">
-          <img src="20210712-GOnvUYeCAq.png" class="illustration">
+          <img src="/front-end/20210712-GOnvUYeCAq.png" class="illustration">
         </div>
         <div class="card-body">
           <div >
