Working on the second page, course sections

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <header>
     <nav>
       <ul class="nav-container menu">
-        <li><a href="index.css" id="logo">Canari</a></li>
-        <li><a href="#" class="menu-item">New</a></li>
-        <li><a href="#" class="menu-item">Topo</a></li>
+        <li><a href="index.html" id="logo">Canari</a></li>
+        <li><a href="index.html" class="menu-item">New</a></li>
+        <li><a href="topo.html" class="menu-item">Topo</a></li>
         <li><a href="#" class="menu-item">Exos</a></li>
       </ul>
 
