Add sections popular course & recents courses

--- a/topo.html
+++ b/topo.html
@@ -33,17 +33,17 @@
   <div id="slogan">Prochaine compétition dans: 
     <button class="timedown">30:40:05</button>
   </div>
-  <section class="main">
+  <section class="main-topo">
     <section class="sub-sections">
       <div class="parts courses_perso">
         <h2>Tes Topos Récents</h2>
         <p>Les topos que tu as recemment lu.</p>
         <div class="perso">
           <div class="courses">
-            <p>sldjfnejln</p>
+            <p>sldjfnejln ---1</p>
           </div>
           <div class="courses">
-            <p>sldjfnejln</p>
+            <p>sldjfnejln---2</p>
           </div>
         </div>
       </div>
@@ -53,10 +53,16 @@
         <p>Les topos que les élèves étudient le plus.</p>
         <div class="popular">
           <div class="courses">
-            <p>sldjfnejln</p>
+            <p>sldjfnejln---3</p>
           </div>
           <div class="courses">
-            <p>sldjfnejln</p>
+            <p>sldjfnejln---4</p>
+          </div>
+          <div class="courses">
+            <p>sldjfnejln---4</p>
+          </div>
+          <div class="courses">
+            <p>sldjfnejln---4</p>
           </div>
           
         </div>
