--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div >
                   <p class="description"> MATHEMATIQUE SCIENTIFIQUE (TD & TC)</p>
                   <h5 class="big-title">Limites et Dérivés</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos deserunt totam similique quia voluptate ea, vel.</p>
                   <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
               </div>
@@ -140,7 +140,7 @@
               <div >
                 <p class="description"> MATHEMATIQUE SCIENTIFIQUE (TC)</p>
                 <h5 class="card-title big-title">Barycentres</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos deserunt totam similique quia voluptate ea, vel.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               </div>
             </div>
@@ -154,7 +154,7 @@
             <div >
               <p class="description"> MATHEMATIQUE SCIENTIFIQUE (3ème)</p>
               <h5 class="card-title big-title">Théorème de pythagore</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos similique quia voluptate ea, vel.</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
@@ -168,7 +168,7 @@
           <div >
             <p class="description"> CHIMIE (TD & TC)</p>
             <h5 class="card-title big-title">Alchools</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos deserunt totam similique quia voluptate ea, vel.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
